# PROJECTS

./: .gitignore
AirIndia-RAG-IntelligenceBOT/: .env.example  .flake8  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  app.py  requirements.txt
AirIndia-RAG-IntelligenceBOT/config/: prompts.py  settings.py
AirIndia-RAG-IntelligenceBOT/src/: logger.py
AirIndia-RAG-IntelligenceBOT/src/llm/: base.py  bedrock_provider.py  ollama_provider.py
AirIndia-RAG-IntelligenceBOT/src/rag/: embeddings.py  engine.py  ingest.py  vector_store.py
AirIndia-RAG-IntelligenceBOT/tests/: combined_rag_report.csv  conftest.py  detailed_rag_report.csv  report.csv  sample_questions.txt  test_combined_eval.py  test_rag_quality.py  test_ragas_eval.py
rag-backend/: .env  README.md  main.py  streamlit_app.py
rag-backend/src/config/: config.py  logger.py
rag-backend/src/document_ingestion/: document_processor.py
rag-backend/src/graph_builder/: graph_builder.py
rag-backend/src/node/: nodes.py  reactnode.py
rag-backend/src/vectorstore/: vectorstore.py
text_to_sql_chatbot/: .gitignore  README.md  app.py  main.py  pyproject.toml
text_to_sql_chatbot/config/: settings.py
text_to_sql_chatbot/docs/: DESIGN.md  REPORTS.md  SETUP.md
text_to_sql_chatbot/scripts/: ingest_data.py
text_to_sql_chatbot/src/: agent.py  database.py  llm.py  logger.py
